Started to work on a plan, then got distracted coming up with ideas for content (oops). Getting back on track, and switching over to new branch.

--- a/map/index.html
+++ b/map/index.html
@@ -8,26 +8,27 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/home.css">
-    <title>Alchemy & Adventure</title>
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/map.css">
+    <title>A&A - Map</title>
 </head>
 
 <body>
     <header>
+        <h2>
+            Welcome to the Map!
+        </h2>
         <div class="gutter-right logo">
             <!-- <img src="assets/big-logo.png" /> -->
         </div>
     </header>
-    <main>
-        <section class="main-section">
-            <img class="main-logo" src="./assets/alchemy-logo.png" />
-            <h2>
-                Welcome to Alchemy & Adventure!
-            </h2>
-
-
+    <main class="main-map">
+        <section class="map-section">
+                <a class="link" name="link1" href="../quest/?quest=fire"></a>
+                <a class="link" name="link2" href="../quest/?quest=air"></a>
+                <a class="link" name="link3" href="../quest/?quest=earth"></a>
+                <a class="link" name="link4" href="../quest/?quest=water"></a>
         </section>
     </main>
     <footer>
