--- a/quest/index.html
+++ b/quest/index.html
@@ -8,25 +8,23 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/home.css">
-    <title>Alchemy & Adventure</title>
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/quest.css">
+    <title>A&A - Quest</title>
 </head>
 
 <body>
     <header>
+        <h2>
+            Welcome to the Quest Page
+        </h2>
         <div class="gutter-right logo">
             <!-- <img src="assets/big-logo.png" /> -->
         </div>
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="./assets/alchemy-logo.png" />
-            <h2>
-                Welcome to Alchemy & Adventure!
-            </h2>
-
 
         </section>
     </main>
