End of work day commit. Lots added.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,31 @@
             <h2>
                 Welcome to Alchemy & Adventure!
             </h2>
-
+            <p>
+                Fill out the information in the form below to create a character and begin your alchemical journey!
+            </p>
+            <form id="character">
+                <input type="text" placeholder="Character Name">
+                <div>
+                    <label name="momo">
+                        <input type="radio" name="char" id="momo">
+                        <img class="radioimg" src="./assets/dione.jpg" alt="">
+                    </label>
+                    <label name="apa">
+                        <input type="radio" name="char" id="apa">
+                        <img class="radioimg" src="./assets/dione.jpg" alt="">
+                    </label>
+                    <label name="koda">
+                        <input type="radio" name="char" id="koda">
+                        <img class="radioimg" src="./assets/dione.jpg" alt="">
+                    </label>
+                    <label name="ryka">
+                        <input type="radio" name="char" id="ryka">
+                        <img class="radioimg" src="./assets/dione.jpg" alt="">
+                    </label>
+                </div>
+                <button type="submit">Create Character</button>
+            </form>
 
         </section>
     </main>
