--- a/index.html
+++ b/index.html
@@ -31,25 +31,29 @@
             </p>
             <form id="character">
                 <input type="text" placeholder="Character Name">
-                <div>
+                <div class="labels">
                     <label name="momo">
-                        <input type="radio" name="char" id="momo">
-                        <img class="radioimg" src="./assets/dione.jpg" alt="">
+                        <input type="radio" name="char" id="momo" value="momo">
+                        <img class="radioimg" src="./assets/dione.jpg" alt="momo">
+                        <span>Momo</span>
                     </label>
                     <label name="apa">
-                        <input type="radio" name="char" id="apa">
-                        <img class="radioimg" src="./assets/dione.jpg" alt="">
+                        <input type="radio" name="char" id="apa" value="apa">
+                        <img class="radioimg" src="./assets/dione.jpg" alt="apa">
+                        <span>Apa</span>
                     </label>
                     <label name="koda">
-                        <input type="radio" name="char" id="koda">
+                        <input type="radio" name="char" id="koda" value="koda">
                         <img class="radioimg" src="./assets/dione.jpg" alt="">
+                        <span>Koda</span>
                     </label>
                     <label name="ryka">
-                        <input type="radio" name="char" id="ryka">
+                        <input type="radio" name="char" id="ryka" value="ryka">
                         <img class="radioimg" src="./assets/dione.jpg" alt="">
+                        <span>Ryka</span>
                     </label>
                 </div>
-                <button type="submit">Create Character</button>
+                <button type="submit" id="button">Create Character</button>
             </form>
 
         </section>
