initial functions. Struggling to focus on my own project.

--- a/index.html
+++ b/index.html
@@ -30,32 +30,31 @@
                 Fill out the information in the form below to create a character and begin your alchemical journey!
             </p>
             <form id="character">
-                <input type="text" placeholder="Character Name">
+                <input type="text" name="name" placeholder="Character Name">
                 <div class="labels">
-                    <label name="momo">
-                        <input type="radio" name="char" id="momo" value="momo">
-                        <img class="radioimg" src="./assets/dione.jpg" alt="momo">
-                        <span>Momo</span>
+                    <label>
+                        <input type="radio" name="class" value="hunter">
+                        <img class="radioimg" src="./assets/dione.jpg">
+                        <span>Hunter</span>
                     </label>
-                    <label name="apa">
-                        <input type="radio" name="char" id="apa" value="apa">
-                        <img class="radioimg" src="./assets/dione.jpg" alt="apa">
-                        <span>Apa</span>
+                    <label>
+                        <input type="radio" name="class" value="alchemist">
+                        <img class="radioimg" src="./assets/dione.jpg">
+                        <span>Alchemist</span>
                     </label>
-                    <label name="koda">
-                        <input type="radio" name="char" id="koda" value="koda">
-                        <img class="radioimg" src="./assets/dione.jpg" alt="">
-                        <span>Koda</span>
+                    <label>
+                        <input type="radio" name="class" value="herbalist">
+                        <img class="radioimg" src="./assets/dione.jpg">
+                        <span>Herbalist</span>
                     </label>
-                    <label name="ryka">
-                        <input type="radio" name="char" id="ryka" value="ryka">
-                        <img class="radioimg" src="./assets/dione.jpg" alt="">
-                        <span>Ryka</span>
+                    <label>
+                        <input type="radio" name="class" value="mineralogist">
+                        <img class="radioimg" src="./assets/dione.jpg">
+                        <span>Minerologist</span>
                     </label>
                 </div>
-                <button type="submit" id="button">Create Character</button>
+                <button>Create Character</button>
             </form>
-
         </section>
     </main>
     <footer>
