--- a/quest/index.html
+++ b/quest/index.html
@@ -32,7 +32,7 @@
         <div class="copy gutter-right"></div>
     </footer>
 
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./quest.js"></script>
 </body>
 
 </html>
