Oops forgot to start todays work on a new branch again. So now I'm on a new branch for today.

--- a/map/index.html
+++ b/map/index.html
@@ -19,21 +19,11 @@
         <h2>
             Welcome to the Map!
         </h2>
-        <div class="gutter-right logo">
-            <!-- <img src="assets/big-logo.png" /> -->
-        </div>
     </header>
     <main class="main-map">
-        <section class="map-section">
-                <a class="link" name="link1" href="../quest/?quest=fire"></a>
-                <a class="link" name="link2" href="../quest/?quest=air"></a>
-                <a class="link" name="link3" href="../quest/?quest=earth"></a>
-                <a class="link" name="link4" href="../quest/?quest=water"></a>
+        <section class="map-section" id="map-section">
         </section>
     </main>
-    <footer>
-        <div class="copy gutter-right"></div>
-    </footer>
 
     <script type="module" src="./map.js"></script>
 </body>
