Added HTML elements to quests page. Created a function to render user info. User Info rendered into top of map and quest page.

--- a/map/index.html
+++ b/map/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/map.css">
-    <title>A&A - Map</title>
+    <title>Map</title>
 </head>
 
 <body>
@@ -19,9 +19,16 @@
         <h2>
             Welcome to the Map!
         </h2>
+        <div class="use" id="user-info">
+            <!-- user info appended here -->
+        </div>
     </header>
     <main class="main-map">
+        <p id="map-story">
+
+        </p>
         <section class="map-section" id="map-section">
+            <!-- links appended here -->
         </section>
     </main>
 
