Working on quest rendering.

--- a/quest/index.html
+++ b/quest/index.html
@@ -23,8 +23,8 @@
             <!-- user info appended here -->
         </div>
     </header>
-    <main>
-        <span class="quest-story">
+    <main id="main">
+        <!-- <span id="quest-story">
 
         </span>
         <img id="quest-img" src="" alt="">
@@ -33,7 +33,7 @@
             <input type="radio" name="choice" id="choice-two">
             <input type="radio" name="choice" id="choice-three">
             <button>Select Action</button>
-        </form>
+        </form> -->
     </main>
     <script type="module" src="./quest.js"></script>
 </body>
