Rendering of form and radio inputs in quest page succesful. scoreQuest is not functioning correctly at the moment.

--- a/quest/index.html
+++ b/quest/index.html
@@ -24,16 +24,10 @@
         </div>
     </header>
     <main id="main">
-        <!-- <span id="quest-story">
 
-        </span>
-        <img id="quest-img" src="" alt="">
-        <form id="quest-form">
-            <input type="radio" name="choice" id="choice-one">
-            <input type="radio" name="choice" id="choice-two">
-            <input type="radio" name="choice" id="choice-three">
-            <button>Select Action</button>
-        </form> -->
+        <div id="results" class="hidden">
+
+        </div>
     </main>
     <script type="module" src="./quest.js"></script>
 </body>
