Results and link to map displayed when quest completed. When You return to the map page, the links correctly turn into spans and you are redirected to the end page. Final step: create the end page

--- a/fin/index.html
+++ b/fin/index.html
@@ -13,6 +13,10 @@
     <title>The End</title>
 </head>
 <body>
+    <main>
+
+    </main>
+    
     <script type="module" src="./fin.js"></script>
 </body>
 </html>
