--- a/quest/index.html
+++ b/quest/index.html
@@ -23,7 +23,10 @@
             <!-- user info appended here -->
         </div>
     </header>
-    <main id="main">
+    <main>
+        <div id="main-quest">
+
+        </div>
 
         <div id="results" class="hidden">
 
