--- a/fin/index.html
+++ b/fin/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/map.css">
+    <link rel="stylesheet" href="../styles/fin.css">
     <title>The End</title>
 </head>
-<body>
-    <main>
 
+<body>
+    <header>
+        <div class="use" id="user-info">
+
+        </div>
+    </header>
+    <main>
+        <div id="result-display">
+
+        </div>
     </main>
-    
+
+
     <script type="module" src="./fin.js"></script>
 </body>
+
 </html>
